--- a/src/Bouvet.AssetHub.API/appsettings.json
+++ b/src/Bouvet.AssetHub.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "TestDb",
+    "CollectionName": "Assets"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
