--- a/src/bouvet.assethub.ui/package.json
+++ b/src/bouvet.assethub.ui/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/w3c-image-capture": "^1.0.6",
+    "jsqr": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
+    "react-webcam-qr-scanner": "^1.0.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
