--- a/src/Bouvet.AssetHub.API/appsettings.json
+++ b/src/Bouvet.AssetHub.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Data Source=SqlServer,1433;Initial Catalog=AssetHubContext;User ID=sa; Password=@HUB2022;Connect Timeout=10;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
