--- a/src/Bouvet.AssetHub.Data/Bouvet.AssetHub.Data.csproj
+++ b/src/Bouvet.AssetHub.Data/Bouvet.AssetHub.Data.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bouvet.AssetHub.Domain\Bouvet.AssetHub.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
