move domain folder

--- a/src/Bouvet.AssetHub.Data/Bouvet.AssetHub.Data.csproj
+++ b/src/Bouvet.AssetHub.Data/Bouvet.AssetHub.Data.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Bouvet.AssetHub.Domain\Bouvet.AssetHub.Domain.csproj" />
+    <ProjectReference Include="..\Bouvet.AssetHub.Domain\Bouvet.AssetHub.Domain.csproj" />
   </ItemGroup>
 
 </Project>
