--- a/src/Bouvet.AssetHub.Domain/Bouvet.AssetHub.Domain.csproj
+++ b/src/Bouvet.AssetHub.Domain/Bouvet.AssetHub.Domain.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Handlers\" />
   </ItemGroup>
 
 </Project>
