--- a/src/Bouvet.AssetHub.API/appsettings.json
+++ b/src/Bouvet.AssetHub.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Data Source=SqlServer,1433;Initial Catalog=AssetHubContext;User ID=SqlUser;Password=SqlPassword;Connect Timeout=10;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DataContext": "Data Source=localhost,1433;Initial Catalog=AssetHubContext;User ID=SqlUser;Password=SqlPassword;Connect Timeout=10;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
