--- a/src/Bouvet.AssetHub.API/Bouvet.AssetHub.API.csproj
+++ b/src/Bouvet.AssetHub.API/Bouvet.AssetHub.API.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="LanguageExt.Core" Version="4.2.9" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -33,6 +34,7 @@
 
   <ItemGroup>
     <Folder Include="Domain\Notification\Model\" />
+	<InternalsVisibleTo Include="Bouvet.AssetHub.API.Test.csproj" />
   </ItemGroup>
 
 </Project>
