--- a/src/bouvet.assethub.ui/package.json
+++ b/src/bouvet.assethub.ui/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@mui/x-data-grid": "^5.17.8",
+    "@tanstack/react-query": "^4.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
