--- a/src/bouvet.assethub.ui/package.json
+++ b/src/bouvet.assethub.ui/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@mui/x-data-grid": "^5.17.8",
+    "@mui/x-date-pickers": "^5.0.7",
     "@tanstack/react-query": "^4.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,8 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
