--- a/src/bouvet.assethub.ui/package.json
+++ b/src/bouvet.assethub.ui/package.json
@@ -15,16 +15,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.0",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
-    "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "jsqr": "^1.4.0",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^30.2.0"
   }
