--- a/src/bouvet.assethub.ui/package.json
+++ b/src/bouvet.assethub.ui/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "html5-qrcode": "^2.3.3",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
