--- a/src/bouvet.assethub.server/docker-compose.yml
+++ b/src/bouvet.assethub.server/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3.4'
 
 services:
    bouvet.assethub.api:
-        image: ${DOCKER_REGISTRY-}bouvetassethubapi
+        image: ${DOCKER_REGISTRY-}bouvetassethubapivisualstudio
         build:
             context: .
             dockerfile: Bouvet.AssetHub.API/Dockerfile
         networks:
-            - asset-network 
+            - src_assethub-network
         ports:
             - "80"
             - "3001:443"
 networks:
-    asset-network:
+    src_assethub-network:
         external: true
